@@ -53,7 +53,7 @@
 <p class="title">TDS and SQL Server-related links</p>
 <dl>
 <dt><a href="http://support.microsoft.com/default.aspx?scid=kb;EN-US;286359">Microsoft Knowledge Base Article - 286359</a></dt>
-<dd>Information about using sp_cursoropen with parameters</dd>
+<dd>Information about using sp_cursoropen with parameters.</dd>
 <dt><a href="http://www.inetsoftware.de/English/Produkte/JDBCTreiber/SqlStates.htm">SQL states returned by the i-net drivers</a></dt>
 <dd>SQL state values with the associated vendor codes (SQL Server-specific error code). Could prove very useful for a correct implementation of exception handling.</dd>
 <dt><a href="http://msdn.microsoft.com/library/default.asp?url=/library/en-us/odbcsql/od_6_015_0tf7.asp">Effects of SQL-92 Options</a></dt>
@@ -61,7 +61,9 @@
 <dt><a href="http://msdn.microsoft.com/library/default.asp?url=/library/en-us/odbc/htm/odappapr.asp">ODBC Reference</a></dt>
 <dd>The ODBC reference from Micosoft.</dd>
 <dt><a href="http://www.contrib.andrew.cmu.edu/~shadow/sql/sql1992.txt">SQL 92 Standard</a></dt>
-<dd>International Standard ISO/IEC 9075:1992, Database Language SQL</dd>
+<dd>International Standard ISO/IEC 9075:1992, Database Language SQL.</dd>
+<dt><a href="http://www.sqljunkies.com/How%20To/2E1101E0-D5C1-4DBD-A398-FE485DFA439B.scuk">SQL Server Connectivity</a></dt>
+<dd>Article on SQL Server connectivity and connectivity troubleshooting. Very useful as a FAQ reference.</dd>
 </dl>
 
 
